_sass/theme.scss
$font-size: 1.075rem;
$font-size-publications: $font-size * 0.8;
$font-size-icon-multiplier: 0.6;
$font-size-link-icon: $font-size * $font-size-icon-multiplier;

$screen-width-xtra-small: 540px;
$screen-width-small: 991px;
$screen-width-medium: 1300px;
$screen-width: 1500px;
$screen-width-large: 1700px;
$screen-width-very-large: 2000px;
$screen-width-xtra-large: 2500px;
$screen-width-ultra-large: 3000px;

$content-width-ultra-large-screen: 38%;
$content-width-extra-large-screen: 45%;
$content-width-very-large-screen: 55%;
$content-width-large-screen: 70%;
$content-width: 80%;
$content-width-medium-screen: 85%;
$content-width-small-screen: 94%;

$image-height: 197px;
$image-height-large-screen: 240px;
$image-height-extra-large-screen: 280px;
$image-height-ultra-large-screen: 300px;

$padding-link-icon: 3px;
$social-footer-padding: 35px;
$social-icon-margin: 12px;

$link-hover-color: rgb(79, 79, 79);

$navbar-toggler-margin: 20px;
$margin-header-image: 10px;
$margin-header-image-large-screen: 15px;


* {
  font-family: Helvetica, Georgia, serif;
  font-size: $font-size;
  hyphens: manual;
}

.navbar-toggler {
  margin-right: $navbar-toggler-margin;
}

.navbar-brand {
  font-size: 1.4rem !important;
  font-weight: bold;
}

hr {
  width: 15%;
  margin-left: auto !important;
  margin-right: auto !important;
}

.rounded-circle {
  margin-top: $margin-header-image;
  height: $image-height;
  width: $image-height * 1.25;
}

.h1 {
  text-align: center !important;
}

.h2 {
  font-size: 1.3rem !important;
  font-weight: bolder;
}

.page-content {
  margin: 0 auto;
  width: $content-width !important;
  text-align: justify;
}

a.link {
  color:  black !important;
}

a.link:hover {
  color: $link-hover-color !important;
}

a.footer.link {
  color: #6c757d !important;
}

a.footer.link:hover {
  color: $link-hover-color !important;
}

.icon-link {
  padding-left: $padding-link-icon;
  position: relative;
  bottom: 1.5px;
  font-size: $font-size-link-icon;
}

.icon-contact {
  padding-right: $padding-link-icon;
  font-size: $font-size-link-icon;
}

.contact-info {
  text-align: left !important;
}

.contact {
  padding-right: 0 !important;
}

.social-icon {
  width: 40px;
  height: 40px;
  margin-right: $social-icon-margin;
  margin-left: $social-icon-margin;
}

.publication-item {
  font-size: $font-size-publications;
}

a.publication-item {
  font-size: $font-size-publications;
  color: black;
}

a.publication-item:hover {
  color: $link-hover-color;
}

#social-footer{
  padding-top: $social-footer-padding;
  padding-bottom: $social-footer-padding;
  text-align: center;
}

#author {
  display: inline;
  text-align: left;
}

#footer-links {
  float: right;
  display: inline;
}

#map {
  height: 350px;
  width: 100%;
  margin-top: 20px;
}

@media screen and (max-width: $screen-width-xtra-small) {
  .navbar-brand {
    position: relative;
    left: 28px + $navbar-toggler-margin;
  }

  #author {
    display: block;
    margin: auto;
    text-align: center;
  }

  #footer-links {
    display: block;
    float: none;
    margin: auto;
    text-align: center;
  }

  .page-content {
    width: $content-width-small-screen !important;
  }
}

@media screen and (min-width: $screen-width-xtra-small) and (max-width: $screen-width-small) {
  .navbar-brand {
    position: relative;
    left: 28px + $navbar-toggler-margin;
  }

  .page-content {
    width: $content-width-medium-screen !important;
  }
}

@media screen and (max-width: $screen-width-small) {
  .navbar-nav {
    text-align: center !important;
  }

  .contact {
    padding-right: calc(var(--bs-gutter-x) * .5) !important;
  }
}

@media screen and (min-width: $screen-width-small+1) {
  * {
    font-size: $font-size * 1.02;
  }

  .navbar-nav {
    position: relative;
    right: 85px;
  }

  .page-content {
    width: $content-width !important;
  }

  #map {
    margin-top: 0;
  }
}

@media screen and (min-width: $screen-width-medium) {
  * {
    font-size: $font-size * 1.04;
  }

  .page-content {
    width: $content-width-large-screen !important;
  }

  .rounded-circle {
    margin-top: $margin-header-image + $margin-header-image-large-screen;
    margin-bottom: $margin-header-image-large-screen;
    height: $image-height-large-screen;
    width: $image-height-large-screen * 1.25;
  }

  .content {
    margin-top: $margin-header-image + $margin-header-image-large-screen;
  }
}

@media screen and (min-width: $screen-width) {
  .page-content {
    width: $content-width-very-large-screen !important;
  }
}

@media screen and (min-width: $screen-width-large) {
  * {
    font-size: $font-size * 1.06;
  }

  #map {
    height: 400px;
  }
}

@media screen and (min-width: $screen-width-very-large) {
  .rounded-circle {
    height: $image-height-extra-large-screen !important;
    width: $image-height-extra-large-screen * 1.25 !important;
  }

  .page-content {
    width: $content-width-extra-large-screen !important;
  }
}

@media screen and (min-width: $screen-width-xtra-large) {
  .page-content {
    width: $content-width-ultra-large-screen !important;
  }

  .rounded-circle {
    height: $image-height-ultra-large-screen !important;
    width: $image-height-ultra-large-screen * 1.25 !important;
  }
}

@media screen and (min-width: $screen-width-ultra-large) {
  .page-content {
    width: $content-width-ultra-large-screen*0.9 !important;
  }
}

@import "bootstrap/bootstrap";

